--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
 
-<h1>นายณัฐวุฒิ 1057</h1>
-<h1>นายภูวดล 2634</h1>
+<h1>Natthawut1057 Phuwadon2634</h1>
+<div><img src="img.jpg" alt="Hello World from Space" ,src="img1.jpg" alt="Hello World from Space"
+    style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 
 </body>
