--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Natthawut1057 Phuwadon2634</h1>
-<div><img src="img.jpg" alt="Hello World from Space" ,img src="img1.jpg" alt="Hello World from Space"
+<div><img src="img.jpg" alt="Hello World from Space"
     style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 
