--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 </head>
 <body>
 
-<h1>นายณัฐวุฒิ 1057</h1>
-<h1>นายภูวดล 2634</h1>
+<h1>Natthawut 6540201057 Phuwadon 6540202634</h1>
+<div><img src="img.jpg" alt="Hello World from Space"
+    style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
+<p>A new line in our file!</p>
+<div><img src="img1.jpg" alt="Hello Git" 
+    style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
