--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Natthawut 6540201057 Phuwadon 6540202634</h1>
+<h1>Natthawut 6540201057 ,Phuwadon 6540202634</h1>
 <div><img src="img.jpg" alt="Hello World from Space"
     style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
