--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 <div><img src="img1.jpg" alt="Hello Git" 
     style="width:100%;max-width:640px"></div>
 
+    <p>
+        <a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">w3schools</a>
+    </p>
 </body>
 </html>
