--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     style="width:100%;max-width:640px"></div>
 
     <p>
-        <a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">w3schools</a>
+        <h1><a href="https://www.w3schools.com/git/git_branch.asp?remote=github" target="_blank">w3schools</a></h1>
     </p>
 </body>
 </html>
